--- a/PetStoreUI/Pages/PetDetails.cshtml
+++ b/PetStoreUI/Pages/PetDetails.cshtml
@@ -22,7 +22,6 @@
             <img src="@Url.Content("~/" + Model.Pet.ImageUrl)" alt="Pet Image" class="pet-image"/>
             <h3>@Model.Pet.PetName</h3>
             <div class="pet-details-info">
-                <p><strong>Category:</strong> @Model.Pet.Category.Name</p>
                 <p><strong>Gender:</strong> @Model.Pet.Gender</p>
                 <p><strong>Description:</strong> @Model.Pet.PetDescription</p>
                 <p><strong>Price:</strong> $ @Model.Pet.Price</p>
@@ -43,10 +42,26 @@ else
 @section Scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
+        function showToast(message) {
+            var toast = document.createElement('div');
+            toast.className = 'toast';
+            toast.innerText = message;
+            document.body.appendChild(toast);
+            setTimeout(function() {
+                toast.className = 'toast show';
+                setTimeout(function() {
+                    toast.className = 'toast';
+                    setTimeout(function() {
+                        document.body.removeChild(toast);
+                    }, 500);
+                }, 2500);
+            }, 100);
+        }
+
         function addToCart(petId) {
-            console.log("UserId:", userId); // Debugging information
-            if (!userId || userId === "null") {
-                alert("User is not logged in.");
+            console.log("UserEmail:", userEmail); // Debugging information
+            if (!userEmail) {
+                showToast("User is not logged in.");
                 return;
             }
             var quantity = $('#quantity-' + petId).val();
@@ -54,17 +69,17 @@ else
                 url: '/cart',
                 type: 'POST',
                 contentType: 'application/json',
-                data: JSON.stringify({ petId: petId, quantity: quantity, userId: parseInt(userId) }),
+                data: JSON.stringify({ petId: petId, quantity: quantity, userEmail: userEmail }),
                 success: function() {
                     var cartCountElement = $('#cart-count');
                     var currentCount = parseInt(cartCountElement.text()) || 0;
                     var newCount = currentCount + parseInt(quantity);
                     cartCountElement.text(newCount);
-                    alert('Added to cart');
+                    showToast('Added to cart');
                 },
                 error: function(xhr, status, error) {
                     console.error("Error:", xhr.responseText); // Debugging information
-                    alert('Failed to add to cart');
+                    showToast('Failed to add to cart');
                 }
             });
         }
